[gd_scene load_steps=2 format=3 uid="uid://sat6qxf0xi7d"]

[ext_resource type="Script" uid="uid://2y3ta5ax35gc" path="res://ui/difficulty_chooser.gd" id="1_adeqp"]

[node name="DifficultyChooser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_adeqp")

[node name="ItemList" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Easy" type="Button" parent="ItemList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
autowrap_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ItemList/Easy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[b]10-11 lat[/b]
- Dodawanie i odejmowanie w zakresie 50
- Tabliczka mnożenia"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Normal" type="Button" parent="ItemList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
autowrap_mode = 3

[node name="RichTextLabel2" type="RichTextLabel" parent="ItemList/Normal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[b]12-13 lat[/b]
- Podzielność
- Procenty"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hard" type="Button" parent="ItemList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
autowrap_mode = 3

[node name="RichTextLabel3" type="RichTextLabel" parent="ItemList/Hard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[b]14-15 lat[/b]
- Zaokrąglanie
- Potęgi"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ItemList/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="ItemList/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="ItemList/Hard" to="." method="_on_hard_pressed"]
